# iterfuncpy

./: README.md  pyproject.toml  setup.py
IterFunc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
iterfunc/: __init__.py  iter_func.py  main.py
